# scratchDB

highwayhash/: LICENSE
scratchDB/: CMakeLists.txt
scratchDB-cli/: CMakeLists.txt  main.cpp
scratchDB-tests/: CMakeLists.txt  dbmanagement-tests.cpp  hashing-tests.cpp  keyvalue-tests.cpp  performance-tests.cpp
